--- a/package.json
+++ b/package.json
@@ -32,9 +32,22 @@
     "ci": "npm run lint && npm run typecheck && npm run test",
     "clean": "lerna clean -y",
     "lint": "lerna run lint --stream",
+    "lint:fix": "lerna run lint:fix --stream",
     "postinstall": "npm run bootstrap",
     "start": "lerna run start --stream",
     "test": "lerna run test --stream",
-    "typecheck": "lerna run typecheck --stream -- --noEmit"
+    "typecheck": "lerna run typecheck --stream -- --noEmit",
+    "api:build": "npm run build -- --scope='udagram-restapi'",
+    "api:lint": "npm run lint -- --scope='udagram-restapi'",
+    "api:lint:fix": "npm run lint:fix -- --scope='udagram-restapi'",
+    "api:start": "npm run start -- --scope='udagram-restapi'",
+    "api:test": "npm run test -- --scope='udagram-restapi'",
+    "api:typecheck": "npm run typecheck -- --scope='udagram-restapi'",
+    "frontend:build": "npm run build -- --scope='udagram-frontend'",
+    "frontend:lint": "npm run lint -- --scope='udagram-frontend'",
+    "frontend:lint:fix": "npm run lint:fix -- --scope='udagram-frontend'",
+    "frontend:start": "npm run start -- --scope='udagram-frontend'",
+    "frontend:test": "npm run test -- --scope='udagram-frontend'",
+    "frontend:typecheck": "npm run typecheck -- --scope='udagram-frontend'"
   }
 }
