--- a/packages/aws-udagram-frontend/package.json
+++ b/packages/aws-udagram-frontend/package.json
@@ -8,6 +8,10 @@
     "type": "git",
     "url": "https://github.com/Drew-Kimberly/aws-udagram-frontend"
   },
+  "type": "module",
+  "engines": {
+    "node": ">=8.10.0"
+  },
   "dependencies": {
     "@angular/common": "^7.2.15",
     "@angular/core": "^7.2.15",
@@ -51,7 +55,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
-    "lint": "ng lint",
+    "lint": "eslint --max-warnings 0 --ext .ts,.js src",
+    "lint:fix": "eslint --fix --ext .ts,.js src",
     "e2e": "ng e2e"
   }
 }
