--- a/packages/aws-udagram-frontend/package.json
+++ b/packages/aws-udagram-frontend/package.json
@@ -58,6 +58,7 @@
     "test": "ng test",
     "lint": "eslint --max-warnings 0 --ext .ts,.js src",
     "lint:fix": "eslint --fix --ext .ts,.js src",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "typecheck": "tsc --noEmit"
   }
 }
