--- a/packages/aws-udagram-frontend/e2e/tsconfig.e2e.old.json
+++ b/packages/aws-udagram-frontend/e2e/tsconfig.e2e.old.json
@@ -1,5 +1,5 @@
 {
-  "extends": "../tsconfig.json",
+  "extends": "../tsconfig.json.old",
   "compilerOptions": {
     "outDir": "../out-tsc/app",
     "module": "commonjs",
