--- a/packages/aws-udagram-frontend/tsconfig.json
+++ b/packages/aws-udagram-frontend/tsconfig.json
@@ -1,22 +1,24 @@
 {
-  "compileOnSave": false,
+  "extends": "../../tsconfig.base",
+  "include": ["./src"],
   "compilerOptions": {
-    "baseUrl": "./",
-    "outDir": "./dist/out-tsc",
-    "sourceMap": true,
-    "declaration": false,
-    "module": "es2015",
-    "moduleResolution": "node",
-    "emitDecoratorMetadata": true,
-    "experimentalDecorators": true,
+    "outDir": "./www",
     "importHelpers": true,
-    "target": "es5",
-    "typeRoots": [
-      "node_modules/@types"
+    "isolatedModules": false,
+    "noImplicitAny": false,
+    "module": "es2015",
+    "types": [
+      "jasmine",
+      "jasminewd2",
+      "node"
     ],
     "lib": [
       "es2018",
       "dom"
     ]
-  }
+  },
+  "files": [
+    "./src/test.ts",
+    "./src/polyfills.ts"
+  ]
 }
