--- a/packages/aws-udagram-frontend/angular.json
+++ b/packages/aws-udagram-frontend/angular.json
@@ -18,7 +18,7 @@
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.app.json",
+            "tsConfig": "tsconfig.json",
             "assets": [
               {
                 "glob": "**/*",
@@ -97,7 +97,7 @@
           "options": {
             "main": "src/test.ts",
             "polyfills": "src/polyfills.ts",
-            "tsConfig": "src/tsconfig.spec.json",
+            "tsConfig": "tsconfig.json",
             "karmaConfig": "src/karma.conf.js",
             "styles": [],
             "scripts": [],
@@ -124,7 +124,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["src/tsconfig.app.json", "src/tsconfig.spec.json"],
+            "tsConfig": ["tsconfig.json"],
             "exclude": ["**/node_modules/**"]
           }
         },
@@ -173,7 +173,7 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": "e2e/tsconfig.e2e.json",
+            "tsConfig": "tsconfig.json",
             "exclude": ["**/node_modules/**"]
           }
         }
