--- a/packages/aws-udagram-frontend/package.json
+++ b/packages/aws-udagram-frontend/package.json
@@ -59,6 +59,7 @@
     "lint": "eslint --max-warnings 0 --ext .ts,.js src",
     "lint:fix": "eslint --fix --ext .ts,.js src",
     "e2e": "ng e2e",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "ci": "npm run lint && npm run typecheck"
   }
 }
