--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,8 @@ jobs:
     - stage: test
       script: ./scripts/travisci/test.sh
     - stage: monorepo-split
+      if: branch = master
       script: ./scripts/travisci/monorepo-split.sh
     - stage: deploy
+      if: branch = master
       script: ./scripts/travisci/deploy.sh
