--- a/package.json
+++ b/package.json
@@ -13,28 +13,60 @@
     "url": "https://github.com/Drew-Kimberly/Udagram/issues"
   },
   "homepage": "https://github.com/Drew-Kimberly/Udagram#readme",
-  "dependencies": {},
+  "dependencies": {
+    "@drewkimberly/udagram-auth": "file:packages/udagram-auth",
+    "@drewkimberly/udagram-feed-svc": "file:packages/udagram-feed-svc",
+    "@drewkimberly/udagram-frontend": "file:packages/udagram-frontend",
+    "@drewkimberly/udagram-user-svc": "file:packages/udagram-user-svc"
+  },
   "devDependencies": {
-    "@types/node": "^13.7.1",
-    "@typescript-eslint/eslint-plugin": "^2.19.2",
-    "@typescript-eslint/parser": "^2.19.2",
+    "@angular-devkit/architect": "~0.12.3",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/core": "~7.2.3",
+    "@angular-devkit/schematics": "~7.2.3",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler": "^7.2.16",
+    "@angular/compiler-cli": "^7.2.16",
+    "@angular/language-service": "^7.2.16",
+    "@ionic/angular-toolkit": "^1.5.1",
+    "@types/bcrypt": "^3.0.0",
+    "@types/bluebird": "^3.5.29",
+    "@types/express": "^4.17.2",
+    "@types/jasmine": "~2.8.8",
+    "@types/jasminewd2": "^2.0.8",
+    "@types/jsonwebtoken": "^8.3.7",
+    "@types/node": "^13.7.4",
+    "@types/sequelize": "^4.28.8",
+    "@types/validator": "^10.11.3",
+    "@typescript-eslint/eslint-plugin": "^2.20.0",
+    "@typescript-eslint/parser": "^2.20.0",
+    "codelyzer": "~4.5.0",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.10.0",
     "eslint-plugin-prettier": "^3.1.2",
+    "jasmine-core": "~2.99.1",
+    "jasmine-spec-reporter": "~4.2.1",
+    "karma": "~3.1.4",
+    "karma-chrome-launcher": "~2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.6",
+    "karma-jasmine": "~1.1.2",
+    "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^3.20.2",
     "prettier": "^1.19.1",
+    "protractor": "^5.4.3",
+    "serialize-javascript": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.7.5"
+    "typescript": "^3.8.2"
   },
   "scripts": {
-    "bootstrap": "lerna bootstrap --no-ci",
+    "bootstrap": "lerna bootstrap --no-ci --hoist",
     "build:dev": "lerna run build:dev --stream",
     "build:prod": "lerna run build:prod --stream",
     "ci": "lerna run ci --stream",
     "clean": "lerna clean -y",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
-    "postinstall": "npm run bootstrap",
+    "postinstall": "npm run bootstrap ",
     "start": "lerna run start --stream",
     "test": "lerna run test --stream",
     "typecheck": "lerna run typecheck --stream",
