--- a/packages/udagram-auth/tsconfig.json
+++ b/packages/udagram-auth/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../../tsconfig.base",
   "include": ["./src"],
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "declaration": true
   }
 }
