--- a/packages/udagram-frontend/package.json
+++ b/packages/udagram-frontend/package.json
@@ -13,30 +13,31 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@angular/common": "^7.2.15",
-    "@angular/core": "^7.2.15",
-    "@angular/forms": "^7.2.15",
+    "@angular/common": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
     "@angular/http": "^7.2.15",
-    "@angular/platform-browser": "^7.2.15",
-    "@angular/platform-browser-dynamic": "^7.2.15",
-    "@angular/router": "^7.2.15",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@ionic-native/core": "^5.9.0",
     "@ionic-native/splash-screen": "^5.9.0",
     "@ionic-native/status-bar": "^5.9.0",
     "@ionic/angular": "^4.6.2",
     "core-js": "^2.6.9",
-    "rxjs": "~6.3.3",
-    "zone.js": "~0.8.29"
+    "rxjs": "^6.5.4",
+    "typescript": "^3.5.3",
+    "zone.js": "~0.9.1"
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/cli": "^8.3.25",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/language-service": "^8.2.14",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
@@ -53,6 +54,7 @@
   },
   "scripts": {
     "ng": "ng",
+    "upgrade": "ng update @angular/cli@8 @angular/core@8",
     "start": "ng serve",
     "build:dev": "ng build",
     "build:prod": "ng build --prod",
