More fixes for managing udagram-frontend in monorepo

--- a/packages/udagram-auth/tsconfig.json
+++ b/packages/udagram-auth/tsconfig.json
@@ -2,7 +2,6 @@
   "extends": "../../tsconfig.base",
   "include": ["./src"],
   "compilerOptions": {
-    "outDir": "./dist",
-    "declaration": true
+    "outDir": "./dist"
   }
 }
