--- a/package.json
+++ b/package.json
@@ -21,13 +21,20 @@
   },
   "devDependencies": {
     "@angular-devkit/architect": "~0.12.3",
-    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular-devkit/build-angular": "^0.803.25",
     "@angular-devkit/core": "~7.2.3",
     "@angular-devkit/schematics": "~7.2.3",
-    "@angular/cli": "^7.3.9",
-    "@angular/compiler": "^7.2.16",
-    "@angular/compiler-cli": "^7.2.16",
-    "@angular/language-service": "^7.2.16",
+    "@angular/cli": "^8.3.25",
+    "@angular/common": "^8.2.14",
+    "@angular/compiler": "^8.2.14",
+    "@angular/compiler-cli": "^8.2.14",
+    "@angular/core": "^8.2.14",
+    "@angular/forms": "^8.2.14",
+    "@angular/http": "^7.2.15",
+    "@angular/language-service": "^8.2.14",
+    "@angular/platform-browser": "^8.2.14",
+    "@angular/platform-browser-dynamic": "^8.2.14",
+    "@angular/router": "^8.2.14",
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.29",
@@ -56,14 +63,14 @@
     "protractor": "^5.4.3",
     "serialize-javascript": "^2.1.1",
     "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.8.2"
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --no-ci --hoist",
     "build:dev": "lerna run build:dev --stream",
     "build:prod": "lerna run build:prod --stream",
     "ci": "lerna run ci --stream",
-    "clean": "lerna clean -y",
+    "clean": "lerna clean -y && rm -rf node_modules",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
     "postinstall": "npm run bootstrap ",
