--- a/packages/udagram-frontend/angular.json
+++ b/packages/udagram-frontend/angular.json
@@ -19,6 +19,7 @@
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.json",
+            "preserveSymlinks": true,
             "assets": [
               {
                 "glob": "**/*",
