--- a/packages/udagram-user-svc/package.json
+++ b/packages/udagram-user-svc/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "author": "Drew Kimberly",
   "license": "UNLICENSED",
+  "private": true,
   "repository": {
     "type": "git",
     "url": "https://github.com/Drew-Kimberly/udagram-user-svc"
@@ -15,7 +16,7 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@drewkimberly/udagram-auth": "file:../udagram-auth",
+    "@drewkimberly/udagram-auth": "^0.4.0",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -44,5 +45,6 @@
     "lint:fix": "eslint --fix --ext .ts src",
     "typecheck": "tsc --noEmit",
     "ci": "npm run lint && npm run typecheck"
-  }
+  },
+  "gitHead": "f446f1688e8b2a4fb4aad807f0647554821e2901"
 }
