WIP - Containerize Udagram services

--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "karma-jasmine": "~1.1.2",
     "karma-jasmine-html-reporter": "^0.2.2",
     "lerna": "^3.20.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1",
     "protractor": "^5.4.3",
     "serialize-javascript": "^2.1.1",
@@ -67,39 +68,42 @@
   },
   "scripts": {
     "bootstrap": "lerna bootstrap --no-ci --hoist",
-    "build:dev": "lerna run build:dev --stream",
-    "build:prod": "lerna run build:prod --stream",
+    "build:dev": "npm-run-all *:build:dev",
+    "build:prod": "npm run build:dev",
     "ci": "lerna run ci --stream",
     "clean": "lerna clean -y && rm -rf node_modules",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
     "postinstall": "npm run bootstrap ",
-    "start": "lerna run start --stream",
+    "start": "docker-compose -f deployment/docker/docker-compose.yml up -d",
+    "stop": "docker-compose -f deployment/docker/docker-compose.yml stop && docker-compose -f deployment/docker/docker-compose.yml down",
     "test": "lerna run test --stream",
     "typecheck": "lerna run typecheck --stream",
-    "auth:build:dev": "npm run build:dev -- --scope='@drewkimberly/udagram-auth'",
-    "auth:build:prod": "npm run build:prod -- --scope='@drewkimberly/udagram-auth'",
+    "auth:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-auth'",
+    "auth:build:prod": "lerna run build:prod --stream --scope='@drewkimberly/udagram-auth'",
     "auth:lint": "npm run lint -- --scope='@drewkimberly/udagram-auth'",
     "auth:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-auth'",
     "auth:start": "npm run start -- --scope='@drewkimberly/udagram-auth'",
     "auth:test": "npm run test -- --scope='@drewkimberly/udagram-auth'",
     "auth:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-auth'",
-    "feed-svc:build:dev": "npm run build:dev -- --scope='@drewkimberly/udagram-feed-svc'",
-    "feed-svc:build:prod": "npm run build:prod -- --scope='@drewkimberly/udagram-feed-svc'",
+    "feed-svc:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-feed-svc -f packages/udagram-feed-svc/Dockerfile .",
+    "feed-svc:build:prod": "npm run feed-svc:build:dev",
     "feed-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:start": "npm run start -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:test": "npm run test -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-feed-svc'",
-    "frontend:build:dev": "npm run build:dev -- --scope='@drewkimberly/udagram-frontend'",
-    "frontend:build:prod": "npm run build:dev -- --scope='@drewkimberly/udagram-frontend'",
+    "frontend:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-frontend -f packages/udagram-frontend/Dockerfile .",
+    "frontend:build:prod": "npm run frontend:build:dev",
     "frontend:lint": "npm run lint -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:start": "npm run start -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:test": "npm run test -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-frontend'",
-    "user-svc:build:dev": "npm run build:dev -- --scope='@drewkimberly/udagram-user-svc'",
-    "user-svc:build:prod": "npm run build:prod -- --scope='@drewkimberly/udagram-user-svc'",
+    "reverse-proxy:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-reverse-proxy -f packages/udagram-reverse-proxy/Dockerfile .",
+    "reverse-proxy:build:prod": "npm run reverse-proxy:build:dev",
+    "user-svc:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-user-svc -f packages/udagram-user-svc/Dockerfile .",
+    "user-svc:build:prod": "npm run user-svc:build:dev",
     "user-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:start": "npm run start -- --scope='@drewkimberly/udagram-user-svc'",
