--- a/packages/udagram-user-svc/package.json
+++ b/packages/udagram-user-svc/package.json
@@ -16,7 +16,7 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
-    "@drewkimberly/udagram-auth": "^0.4.0",
+    "@drewkimberly/udagram-auth": "^0.6.0",
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
@@ -32,7 +32,9 @@
     "@types/bluebird": "^3.5.29",
     "@types/express": "^4.17.2",
     "@types/sequelize": "^4.28.8",
-    "@types/validator": "^10.11.3"
+    "@types/validator": "^10.11.3",
+    "ts-node-dev": "^1.0.0-pre.44",
+    "typescript": "^3.5.3"
   },
   "scripts": {
     "tsc": "tsc",
