Containerize monorepo services cont'd

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,7 @@ services:
       UDAGRAM_DB_PASSWORD: $UDAGRAM_DB_PASSWORD
       UDAGRAM_DB_NAME: $UDAGRAM_DB_NAME
       UDAGRAM_DB_HOST: $UDAGRAM_DB_HOST
+      UDAGRAM_DB_DIALECT: $UDAGRAM_DB_DIALECT
       UDAGRAM_AWS_REGION: $UDAGRAM_AWS_REGION
       UDAGRAM_AWS_PROFILE: $UDAGRAM_AWS_PROFILE
       UDAGRAM_S3_BUCKET: $UDAGRAM_S3_BUCKET
@@ -31,6 +32,7 @@ services:
       UDAGRAM_DB_PASSWORD: $UDAGRAM_DB_PASSWORD
       UDAGRAM_DB_NAME: $UDAGRAM_DB_NAME
       UDAGRAM_DB_HOST: $UDAGRAM_DB_HOST
+      UDAGRAM_DB_DIALECT: $UDAGRAM_DB_DIALECT
       UDAGRAM_AWS_REGION: $UDAGRAM_AWS_REGION
       UDAGRAM_AWS_PROFILE: $UDAGRAM_AWS_PROFILE
       UDAGRAM_S3_BUCKET: $UDAGRAM_S3_BUCKET
