--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@ionic/angular-toolkit": "^1.5.1",
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.29",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/jasmine": "~2.8.8",
     "@types/jasminewd2": "^2.0.8",
@@ -75,29 +76,26 @@
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
     "postinstall": "npm run bootstrap ",
-    "start": "docker-compose -f deployment/docker/docker-compose.yml up -d",
-    "stop": "docker-compose -f deployment/docker/docker-compose.yml stop && docker-compose -f deployment/docker/docker-compose.yml down",
     "test": "lerna run test --stream",
     "typecheck": "lerna run typecheck --stream",
     "auth:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-auth'",
     "auth:build:prod": "lerna run build:prod --stream --scope='@drewkimberly/udagram-auth'",
     "auth:lint": "npm run lint -- --scope='@drewkimberly/udagram-auth'",
     "auth:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-auth'",
-    "auth:start": "npm run start -- --scope='@drewkimberly/udagram-auth'",
     "auth:test": "npm run test -- --scope='@drewkimberly/udagram-auth'",
     "auth:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-auth'",
     "feed-svc:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-feed-svc -f packages/udagram-feed-svc/Dockerfile .",
     "feed-svc:build:prod": "npm run feed-svc:build:dev",
     "feed-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-feed-svc'",
-    "feed-svc:start": "npm run start -- --scope='@drewkimberly/udagram-feed-svc'",
+    "feed-svc:start": "lerna run start --stream --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:test": "npm run test -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-feed-svc'",
     "frontend:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-frontend -f packages/udagram-frontend/Dockerfile .",
     "frontend:build:prod": "npm run frontend:build:dev",
     "frontend:lint": "npm run lint -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-frontend'",
-    "frontend:start": "npm run start -- --scope='@drewkimberly/udagram-frontend'",
+    "frontend:start": "lerna run start --stream --scope='@drewkimberly/udagram-frontend'",
     "frontend:test": "npm run test -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-frontend'",
     "reverse-proxy:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-reverse-proxy -f packages/udagram-reverse-proxy/Dockerfile .",
@@ -106,7 +104,7 @@
     "user-svc:build:prod": "npm run user-svc:build:dev",
     "user-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-user-svc'",
-    "user-svc:start": "npm run start -- --scope='@drewkimberly/udagram-user-svc'",
+    "user-svc:start": "lerna run start --stream --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:test": "npm run test -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-user-svc'"
   }
