--- a/packages/udagram-auth/package.json
+++ b/packages/udagram-auth/package.json
@@ -10,6 +10,10 @@
   },
   "homepage": "https://github.com/Drew-Kimberly/udagram-authc#readme",
   "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist/**/*"
+  ],
   "engines": {
     "node": ">=8.10.0"
   },
