--- a/packages/udagram-auth/tsconfig.json
+++ b/packages/udagram-auth/tsconfig.json
@@ -2,6 +2,9 @@
   "extends": "../../tsconfig.base",
   "include": ["./src"],
   "compilerOptions": {
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "isolatedModules": false,
+    "declaration": true,
+    "sourceMap": false
   }
 }
