--- a/packages/udagram-user-svc/package.json
+++ b/packages/udagram-user-svc/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^3.0.7",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "email-validator": "^2.0.4",
     "express": "^4.17.1",
     "pg": "^7.18.1",
@@ -30,6 +31,7 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/bluebird": "^3.5.29",
+    "@types/cors": "^2.8.6",
     "@types/express": "^4.17.2",
     "@types/sequelize": "^4.28.8",
     "@types/validator": "^10.11.3",
