--- a/packages/udagram-auth/package.json
+++ b/packages/udagram-auth/package.json
@@ -18,11 +18,11 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "@types/jsonwebtoken": "^8.3.7",
     "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
-    "@types/express": "^4.17.2",
-    "@types/jsonwebtoken": "^8.3.7"
+    "@types/express": "^4.17.2"
   },
   "scripts": {
     "tsc": "tsc",
