Udagram app working with containerized microservices

--- a/packages/udagram-user-svc/package.json
+++ b/packages/udagram-user-svc/package.json
@@ -43,7 +43,7 @@
     "start": "ts-node-dev --respawn --transpileOnly ./src/server.ts",
     "build:prod": "npm run build:dev",
     "clean": "rm -rf www/ || true",
-    "build:dev": "npm run clean && tsc && cp -rf src/config www/config && cp package.json www/package.json && cd www && zip -r Archive.zip . && cd ..",
+    "build:dev": "npm run clean && tsc",
     "test": "echo \"No tests implemented\" && exit 0",
     "lint": "eslint --max-warnings 0 --ext .ts src",
     "lint:fix": "eslint --fix --ext .ts src",
