Setup Kubernetes definitions

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,11 @@ services:
       - user-svc
   user-svc:
     image: uncledrewbie/udagram-user-svc
+    command: npm run start
     volumes:
       - $HOME/.aws:/root/.aws
+      - ./packages/udagram-user-svc:/usr/udagram-root/packages/app
+      - /usr/udagram-root/packages/app/node_modules
     environment:
       UDAGRAM_DB_USER: $UDAGRAM_DB_USER
       UDAGRAM_DB_PASSWORD: $UDAGRAM_DB_PASSWORD
@@ -25,8 +28,11 @@ services:
       URL: "http://localhost:8100"
   feed-svc:
     image: uncledrewbie/udagram-feed-svc
+    command: npm run start
     volumes:
       - $HOME/.aws:/root/.aws
+      - ./packages/udagram-feed-svc:/usr/udagram-root/packages/app
+      - /usr/udagram-root/packages/app/node_modules
     environment:
       UDAGRAM_DB_USER: $UDAGRAM_DB_USER
       UDAGRAM_DB_PASSWORD: $UDAGRAM_DB_PASSWORD
