--- a/package.json
+++ b/package.json
@@ -68,14 +68,22 @@
     "typescript": "^3.5.3"
   },
   "scripts": {
+    "apply:k8s": "npm-run-all --parallel apply:k8s:*",
+    "apply:k8s:feed-svc": "kubectl apply -f packages/udagram-feed-svc/k8s",
+    "apply:k8s:frontend": "kubectl apply -f packages/udagram-frontend/k8s",
+    "apply:k8s:reverse-proxy": "kubectl apply -f packages/udagram-reverse-proxy/k8s",
+    "apply:k8s:user-svc": "kubectl apply -f packages/udagram-user-svc/k8s",
     "bootstrap": "lerna bootstrap --no-ci --hoist",
-    "build:dev": "npm-run-all *:build:dev",
+    "build:dev": "npm-run-all --parallel *:build:dev",
     "build:prod": "npm run build:dev",
     "ci": "lerna run ci --stream",
     "clean": "lerna clean -y && rm -rf node_modules",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
-    "postinstall": "npm run bootstrap ",
+    "postinstall": "npm run bootstrap",
+    "start:k8s": "npm-run-all --parallel start:k8s:*",
+    "start:k8s:backend": "kubectl port-forward service/reverse-proxy 8080:8080",
+    "start:k8s:frontend": "kubectl port-forward service/frontend 8100:8100",
     "test": "lerna run test --stream",
     "typecheck": "lerna run typecheck --stream",
     "auth:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-auth'",
