--- a/packages/udagram-user-svc/Dockerfile
+++ b/packages/udagram-user-svc/Dockerfile
@@ -1,14 +1,11 @@
 # Set the base image
 FROM node:10-alpine
 
-# Define Build arguments.
-ARG LOCAL_PACKAGE_DIR=packages/udagram-user-svc
-
 # Create app directory
-WORKDIR /usr/udagram-root/packages/app
+WORKDIR /usr/src/app
 
 # Copy package.json AND package-lock.json
-COPY $LOCAL_PACKAGE_DIR/package*.json ./
+COPY ./package*.json ./
 
 # Install dependencies
 # node-gyp requires additional build dependecies using node:alpine
@@ -20,13 +17,8 @@ RUN apk add --no-cache --virtual .gyp \
     && npm ci \
     && apk del .gyp
 
-# Copy Monorepo root dependencies
-COPY tsconfig.base.json /usr/udagram-root/tsconfig.base.json
-
 # Copy the rest of the code
-COPY $LOCAL_PACKAGE_DIR/src ./src
-COPY $LOCAL_PACKAGE_DIR/tsconfig.json ./tsconfig.json
-COPY $LOCAL_PACKAGE_DIR/Dockerfile ./Dockerfile
+COPY . .
 
 # Compile the app.
 RUN npm run build:prod
