--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,18 @@ notifications:
 
 jobs:
   include:
-    - stage: build
-      script: ./scripts/travisci/build.sh
+    - stage: compile
+      script: ./scripts/travisci/compile.sh
 
     - stage: test
       script: ./scripts/travisci/test.sh
+
+    - stage: build-app-images
+      script: ./scripts/travisci/build-app-images.sh
+
+    - stage: push-app-images
+#      if: (branch = master) AND (type = push)
+      script: ./scripts/travisci/push-app-images.sh
 
     - stage: monorepo-split
       if: (branch = master) AND (type = push)
