--- a/package.json
+++ b/package.json
@@ -76,11 +76,13 @@
     "bootstrap": "lerna bootstrap --no-ci --hoist",
     "build:dev": "npm-run-all --parallel *:build:dev",
     "build:prod": "npm run build:dev",
+    "build-images": "npm-run-all --parallel *:build-image",
     "ci": "lerna run ci --stream",
     "clean": "lerna clean -y && rm -rf node_modules",
     "lint": "lerna run lint --stream",
     "lint:fix": "lerna run lint:fix --stream",
     "postinstall": "npm run bootstrap",
+    "push-images": "npm-run-all --parallel *:push-image",
     "start:k8s": "npm-run-all --parallel start:k8s:*",
     "start:k8s:backend": "kubectl port-forward service/reverse-proxy 8080:8080",
     "start:k8s:frontend": "kubectl port-forward service/frontend 8100:8100",
@@ -92,24 +94,30 @@
     "auth:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-auth'",
     "auth:test": "npm run test -- --scope='@drewkimberly/udagram-auth'",
     "auth:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-auth'",
-    "feed-svc:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-feed-svc -f packages/udagram-feed-svc/Dockerfile .",
+    "feed-svc:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:build:prod": "npm run feed-svc:build:dev",
+    "feed-svc:build-image": "docker build -t uncledrewbie/udagram-feed-svc -f packages/udagram-feed-svc/Dockerfile ./packages/udagram-feed-svc",
+    "feed-svc:push-image": "docker push uncledrewbie/udagram-feed-svc",
     "feed-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:start": "lerna run start --stream --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:test": "npm run test -- --scope='@drewkimberly/udagram-feed-svc'",
     "feed-svc:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-feed-svc'",
-    "frontend:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-frontend -f packages/udagram-frontend/Dockerfile .",
+    "frontend:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-frontend'",
     "frontend:build:prod": "npm run frontend:build:dev",
+    "frontend:build-image": "docker build -t uncledrewbie/udagram-frontend -f packages/udagram-frontend/Dockerfile ./packages/udagram-frontend",
+    "frontend:push-image": "docker push uncledrewbie/udagram-frontend",
     "frontend:lint": "npm run lint -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:start": "lerna run start --stream --scope='@drewkimberly/udagram-frontend'",
     "frontend:test": "npm run test -- --scope='@drewkimberly/udagram-frontend'",
     "frontend:typecheck": "npm run typecheck -- --scope='@drewkimberly/udagram-frontend'",
-    "reverse-proxy:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-reverse-proxy -f packages/udagram-reverse-proxy/Dockerfile .",
-    "reverse-proxy:build:prod": "npm run reverse-proxy:build:dev",
-    "user-svc:build:dev": "set DOCKER_BUILDKIT=1&&docker build -t uncledrewbie/udagram-user-svc -f packages/udagram-user-svc/Dockerfile .",
+    "reverse-proxy:build-image": "docker build -t uncledrewbie/udagram-reverse-proxy -f packages/udagram-reverse-proxy/Dockerfile ./packages/udagram-reverse-proxy",
+    "reverse-proxy:push-image": "docker push uncledrewbie/udagram-reverse-proxy",
+    "user-svc:build:dev": "lerna run build:dev --stream --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:build:prod": "npm run user-svc:build:dev",
+    "user-svc:build-image": "docker build -t uncledrewbie/udagram-user-svc -f packages/udagram-user-svc/Dockerfile ./packages/udagram-user-svc",
+    "user-svc:push-image": "docker push uncledrewbie/udagram-user-svc",
     "user-svc:lint": "npm run lint -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:lint:fix": "npm run lint:fix -- --scope='@drewkimberly/udagram-user-svc'",
     "user-svc:start": "lerna run start --stream --scope='@drewkimberly/udagram-user-svc'",
