--- a/packages/udagram-user-svc/tsconfig.json
+++ b/packages/udagram-user-svc/tsconfig.json
@@ -1,7 +1,18 @@
 {
-  "extends": "../../tsconfig.base",
   "include": ["./src"],
   "compilerOptions": {
+    "target": "es6",
+    "module": "commonjs",
+    "lib": ["esnext"],
+    "isolatedModules": true,
+    "strict": true,
+    "noImplicitAny": true,
+    "strictNullChecks": false,
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "emitDecoratorMetadata": true,
     "outDir": "./www"
-  }
+  },
+  "exclude": ["k8s"]
 }
