--- a/.travis.yml
+++ b/.travis.yml
@@ -19,12 +19,9 @@ jobs:
     - stage: test
       script: ./scripts/travisci/test.sh
 
-    - stage: build-app-images
-      script: ./scripts/travisci/build-app-images.sh
-
-    - stage: push-app-images
+    - stage: build-and-push-images
 #      if: (branch = master) AND (type = push)
-      script: ./scripts/travisci/push-app-images.sh
+      script: ./scripts/travisci/build-app-images.sh
 
     - stage: monorepo-split
       if: (branch = master) AND (type = push)
