--- a/.travis.yml
+++ b/.travis.yml
@@ -13,11 +13,11 @@ notifications:
 
 jobs:
   include:
-    - stage: compile
-      script: ./scripts/travisci/compile.sh
-
-    - stage: test
-      script: ./scripts/travisci/test.sh
+#    - stage: compile
+#      script: ./scripts/travisci/compile.sh
+#
+#    - stage: test
+#      script: ./scripts/travisci/test.sh
 
     - stage: build-and-push-images
 #      if: (branch = master) AND (type = push)
