--- a/.travis.yml
+++ b/.travis.yml
@@ -13,14 +13,14 @@ notifications:
 
 jobs:
   include:
-#    - stage: compile
-#      script: ./scripts/travisci/compile.sh
-#
-#    - stage: test
-#      script: ./scripts/travisci/test.sh
+    - stage: compile
+      script: ./scripts/travisci/compile.sh
+
+    - stage: test
+      script: ./scripts/travisci/test.sh
 
     - stage: build-and-push-images
-#      if: (branch = master) AND (type = push)
+      if: (branch = master) AND (type = push)
       script: ./scripts/travisci/build-app-images.sh
 
     - stage: monorepo-split
