feat: Update K8s services to use LoadBalancer type

--- a/k8s/apps/udagram-reverse-proxy/service.yml
+++ b/k8s/apps/udagram-reverse-proxy/service.yml
@@ -5,6 +5,7 @@ metadata:
     service: reverse-proxy
   name: reverse-proxy
 spec:
+  type: LoadBalancer
   ports:
     - name: "8080"
       port: 8080
