--- a/k8s/apps/udagram-feed-svc/deployment.yml
+++ b/k8s/apps/udagram-feed-svc/deployment.yml
@@ -39,6 +39,11 @@ spec:
                 secretKeyRef:
                   key: password
                   name: udagram-db-secret
+            - name: UDAGRAM_JWT_KEY
+              valueFrom:
+                secretKeyRef:
+                  key: key
+                  name: udagram-jwt-secret
           ports:
             - containerPort: 8080
       restartPolicy: Always
