--- a/k8s/apps/udagram-user-svc/config-map.yml
+++ b/k8s/apps/udagram-user-svc/config-map.yml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: ConfigMap
 data:
   UDAGRAM_AWS_REGION: us-east-1
-  UDAGRAM_AWS_PROFILE: default
+  UDAGRAM_AWS_PROFILE: DEPLOYED
   UDAGRAM_DB_NAME: udagramdev
   UDAGRAM_DB_HOST: udagramdev.cnd1isiumsu9.us-east-1.rds.amazonaws.com
   UDAGRAM_DB_DIALECT: postgres
