--- a/packages/udagram-auth/package.json
+++ b/packages/udagram-auth/package.json
@@ -8,7 +8,7 @@
     "type": "git",
     "url": "https://github.com/Drew-Kimberly/udagram-auth"
   },
-  "homepage": "https://github.com/Drew-Kimberly/udagram-authc#readme",
+  "homepage": "https://github.com/Drew-Kimberly/udagram-auth/blob/master/README.md",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -18,12 +18,11 @@
     "node": ">=8.10.0"
   },
   "dependencies": {
+    "@types/express": "^4.17.2",
     "@types/jsonwebtoken": "^8.3.7",
     "jsonwebtoken": "^8.5.1"
   },
-  "devDependencies": {
-    "@types/express": "^4.17.2"
-  },
+  "devDependencies": {},
   "scripts": {
     "tsc": "tsc",
     "build:prod": "npm run build:dev",
